--- a/src/styles/IngredientList.css
+++ b/src/styles/IngredientList.css
@@ -21,6 +21,5 @@
 }
 
 .Ingredient-header {
-  margin: 1em;
   text-align: center;
 }
