--- a/src/styles/Recipes.css
+++ b/src/styles/Recipes.css
@@ -15,8 +15,10 @@
 .Recipe-link {
   margin-left: 1em;
   border-style: solid;
+  border-color: black;
+  color: black;
   max-width: 300px;
-  
+
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
